# rc-servers

./: .gitignore  Cargo.toml  Dockerfile  PULL_REQUEST_TEMPLATE.yml  README.md  build_arm64.sh  build_riscv64.sh  build_x86_64.sh  docker-compose.dev.yml  docker-compose.release.yml
auth/: Cargo.toml  Rocket.toml
auth/src/: main.rs
auth/src/cardlife/: email.rs  mod.rs  steam.rs  temporary_get_user_id.rs  token.rs
auth/src/common/: cli.rs  mod.rs  steam_utils.rs
auth/src/robocraft/: debug.rs  email.rs  mod.rs  registration.rs  steam.rs  username.rs
cdn/: Cargo.toml  README.md
cdn/src/: cli.rs  main.rs
cdn/src/robocraft/: brawl_data.rs  campaign_data.rs  clan_avatar.rs  favicon.rs  internal_auth.rs  live_data.rs  mod.rs  user_avatar.rs
polariton_auth/: Cargo.toml  README.md
polariton_auth/src/: encryption.rs  handshake.rs  lib.rs  ping_pong.rs
rc_auth/: Cargo.toml  README.md
rc_auth/src/: cli.rs  main.rs
rc_auth/src/oauth/: auth.rs  jwks.rs  mod.rs  openid_config.rs  token.rs
rc_auth/src/robocraft/: displayname.rs  email.rs  mod.rs  registration.rs  steam.rs  username.rs
rc_chat_room/: Cargo.toml  README.md
rc_chat_room/src/: cli.rs  main.rs  op_handler.rs  plugin_wrapper.rs
rc_chat_room/src/data/: channel.rs  clan_invite.rs  mod.rs
rc_chat_room/src/events/: chat_message.rs  mod.rs  player_update.rs  room_join.rs
rc_chat_room/src/operations/: add_modify_sanction.rs  all_joined_channels.rs  chat_ignores.rs  friend_list.rs  join_channel.rs  list_sanctions.rs  mod.rs  more_auth.rs  pending_sanctions.rs  platoon_invite.rs  public_channels.rs  send_message.rs  subscribed_channels.rs  user_online.rs
rc_chat_room/src/persist/: mod.rs
rc_chat_room/src/state/: mod.rs
rc_core/: Cargo.toml  README.md
rc_core/src/: lib.rs  state.rs
rc_core/src/auth/: mod.rs  token.rs
rc_core/src/cubes/: connections.rs  conversion.rs  cpu_count.rs  graph.rs  locations_of.rs  mod.rs  offsetter.rs  parser.rs  rotations.rs  weapon_list.rs
rc_core/src/data/: battle_arena_config.rs  channel.rs  client_config.rs  crf.rs  cube_list.rs  error_codes.rs  game_mode.rs  game_result.rs  garage_bay.rs  item_shop_bundle.rs  lobby.rs  mod.rs  movement_list.rs  player_data.rs  robot_data.rs  sanction.rs  tech_tree.rs  voting.rs  weapon_list.rs  weapon_upgrade.rs
rc_core/src/factory/: adapter_enum.rs  mod.rs
rc_core/src/persist/: chat.rs  client_config.rs  combat.rs  conversion.rs  cube_data.rs  federation.rs  garage.rs  item_shop.rs  maps.rs  mod.rs  movement.rs  multiplayer.rs  settings.rs  singleplayer.rs  team_chooser.rs  tech_tree.rs  vehicle_factory.rs  vehicle_validator.rs  weapon.rs
rc_core/src/polariton/: mod.rs  op_mod.rs  svelto_uuid_copy.rs
rc_database/: Cargo.toml  README.md
rc_database/src/: factory_wrapper.rs  lib.rs  metrics.rs  wrapper.rs
rc_database/src/migration/: m20250424_000001_create_user_table.rs  m20250424_000002_create_user_permissions_table.rs  m20250424_000003_create_garage_table.rs  m20250424_000004_create_user_aux_table.rs  m20250424_000005_create_campaign_tables.rs  m20250526_000001_add_garage_customisation.rs  m20250529_000001_create_sanction_table.rs  m20250713_000001_create_game_table.rs  m20250713_000002_create_player_table.rs  m20250722_000001_create_game_event_table.rs  m20250816_000001_add_fake_players.rs  m20250918_000001_add_player_variant.rs  m20251228_000001_create_score_table.rs  m20260126_000001_create_factory_vehicle_table.rs  m20260215_000001_create_friend_table.rs  m20260221_000001_create_clan_table.rs  m20260221_000002_create_clan_member_table.rs  m20260317_000001_add_game_overrides.rs  m20260705_000001_create_federation_table.rs  m20260705_000002_add_user_federation.rs  mod.rs
rc_database/src/schema/: campaign.rs  campaign_difficulty_completion.rs  clan.rs  clan_member.rs  common_query.rs  federation.rs  friend.rs  game_event.rs  garage.rs  mod.rs  multiplayer_game.rs  multiplayer_game_player.rs  multiplayer_game_score.rs  permissions.rs  sanction.rs  user.rs  user_aux.rs
rc_factory/: Cargo.toml  README.md
rc_factory/src/: lib.rs  traits.rs
rc_factory/src/arc/: adapter.rs  bad_part_ids.rs  mod.rs
rc_factory/src/web/: adapter.rs  mod.rs
rc_factory_web/: Cargo.toml  README.md
rc_factory_web/src/: cli.rs  main.rs
rc_factory_web/src/robocraft/: mod.rs  web_ui.rs
rc_lobby_room/: Cargo.toml  README.md
rc_lobby_room/src/: cli.rs  lobby.rs  main.rs  queue_time_tracker.rs  team_selection.rs
rc_lobby_room/src/data/: network.rs
rc_lobby_room/src/events/: battle_enter.rs  battle_found.rs  enqueue_error.rs  handler.rs  mod.rs
rc_lobby_room/src/operations/: eac.rs  join_queue.rs  mod.rs  no_quit.rs
rc_microtransactions/: Cargo.toml  README.md  Rocket.toml
rc_microtransactions/src/: cli.rs  main.rs
rc_microtransactions/src/robocraft/: auth_jwt.rs  mod.rs  store.rs  token.rs
rc_multiplayer/: Cargo.toml  README.md  run_debug.sh
rc_multiplayer/src/: cli.rs  disconnect.rs  handler.rs  main.rs  traits.rs  user.rs  vehicle_motion.rs
rc_multiplayer/src/data/: mod.rs  net_msg_ty.rs
rc_multiplayer/src/events/: activate_sync.rs  all_loading_progress.rs  assist_bonus.rs  client_unregister.rs  damage_bonus.rs  flipper_start.rs  heal_assist_bonus.rs  heal_bonus.rs  kill_bonus.rs  kill_player.rs  loading_done.rs  loading_progress.rs  map_ping.rs  mod.rs  player_input.rs  player_leave.rs  self_destruct_elimination.rs  spot_player.rs  validate_game_guid.rs  weapon_select.rs
rc_multiplayer/src/handlers/: dataless.rs  gamemode_specific.rs  ingame_broadcast.rs  ingame_broadcast_dataless.rs  mod.rs  simple_typed.rs  stub.rs
rc_multiplayer/src/matches/: aggregate.rs  countdown.rs  engine.rs  generic.rs  messages.rs  mod.rs  timer.rs
rc_services_room/: Cargo.toml  README.md  run_debug.sh
rc_services_room/src/: cli.rs  custom_game_tracker.rs  main.rs  state.rs  user_service.rs  vehicle_validators.rs
rc_services_room/src/data/: auto_regen.rs  campaign.rs  (+28 more)
rc_singleplayer_room/: Cargo.toml  README.md
rc_singleplayer_room/src/: cli.rs  main.rs  state.rs
rc_society/: Cargo.toml
rc_society/src/: cli.rs  main.rs
(+398 files in other folders)
