[package]
name = "rc-servers"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "1.0.0"
edition = "2024"
repository = "https://git.ngram.ca/OpenJam/rc-servers"
license = "GPL-3.0-only"
authors = ["NGnius <ngniusness@gmail.com>"]
readme = "README.md"

[workspace]
members = [
    "cdn",
    "rc_auth",
    "polariton_auth",
    "rc_services", "rc_services_room",
    "rc_microtransactions",
    "rc_social", "rc_social_room",
    "rc_chat", "rc_chat_room",
    "rc_singleplayer", "rc_singleplayer_room",
    "rc_lobby", "rc_lobby_room",
    "rc_core", "rc_database", "rc_factory",
    "rc_multiplayer",
]

[workspace.dependencies]
rocket = { version = "0.5", features = [ "json" ] }
actix-web = { version = "~4.11", default-features = false, features = [ "macros", "compress-brotli", "compress-gzip", "compress-zstd"] }
# actix-web 4.12 does not build properly for some reason...
actix-files = "0.6"
libfj = { version = "0.9", path = "../libfj" }
#libfj = { version = "0.8" }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = [ "derive" ] }
#polariton = { version = "0.4", path = "../polariton", features = [ "tokio-async" ] }
#polariton_server = { version = "0.4", path = "../polariton/server", features = [ "tokio-async" ] }
polariton = { version = "0.4", features = [ "tokio-async" ] }
polariton_server = { version = "0.4", features = [ "tokio-async" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
chrono = "0.4"
git-version = "0.3"
rand = { version = "0.9", features = [ "thread_rng" ] }
num-quaternion = "1.0"
hex = "0.4"
base64 = "0.22"
#oj_serdes = { version = "0.2.0", path = "../oj_core/serdes" }
oj_serdes = "0.2.0"
