[workspace.package]
version = "1.3.0"
edition = "2024"
repository = "https://git.ngram.ca/OpenJam/rc-servers"
license = "GPL-3.0-only"
authors = ["NGnius <ngniusness@gmail.com>"]
readme = "README.md"

[workspace]
members = [
    "cdn",
    "rc_auth",
    "polariton_auth",
    "rc_services", "rc_services_room",
    "rc_microtransactions",
    "rc_social", "rc_social_room",
    "rc_chat", "rc_chat_room",
    "rc_singleplayer", "rc_singleplayer_room",
    "rc_lobby", "rc_lobby_room",
    "rc_core", "rc_database",
    "rc_factory", "rc_factory_web",
    "rc_multiplayer",
    "rc_plugins",
    "rc_society",
]
resolver = "3"

[workspace.dependencies]
actix-web = { version = "4", default-features = false, features = [ "macros", "compress-brotli", "compress-gzip", "compress-zstd", "ws"] }
actix-files = "0.6"
#libfj = { version = "0.10", path = "../libfj" }
libfj = { version = "0.10" }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = [ "derive" ] }
#polariton = { version = "0.6", path = "../polariton", features = [ "tokio-async" ] }
#polariton_server = { version = "0.6", path = "../polariton/server", features = [ "tokio-async" ] }
polariton = { version = "0.6", features = [ "tokio-async" ] }
polariton_server = { version = "0.6", features = [ "tokio-async" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
chrono = "0.4"
git-version = "0.3"
rand = { version = "0.10", features = [ "thread_rng" ] }
num-quaternion = "1.0"
hex = "0.4"
base64 = "0.22"
#oj_serdes = { version = "0.3.0", path = "../oj_core/serdes" }
oj_serdes = "0.3.0"
oj_convert = { version = "0.3.0", path = "../oj_core/convert" }
#oj_convert = "0.3.0"
