[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[features]
steam = ["steamworks"]
robocraft = []
cardlife = []
default = ["robocraft", "cardlife"]

[dependencies]
rocket.workspace = true
libfj.workspace = true
log.workspace = true
env_logger.workspace = true
uuid = { version = "1.12", features = [ "v4", "fast-rng" ] }
steamworks = { version = "0.11", optional = true }
hex = "0.4"
jsonwebtoken = "9"
