[package]
name = "oj_auth"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
steam = ["steamworks"]
cardlife = []
default = ["cardlife"]

[dependencies]
rocket.workspace = true
rocket_dyn_templates = { version = "0.2", features = [ "handlebars" ] }
libfj.workspace = true
log.workspace = true
env_logger.workspace = true
uuid = { version = "1.12", features = [ "v4", "fast-rng" ] }
steamworks = { version = "0.11", optional = true }
hex = "0.4"
jsonwebtoken = "9"
clap.workspace = true
serde.workspace = true
git-version.workspace = true
