[package]
name = "oj_cdn"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
actix-web.workspace = true
actix-files.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
tokio = { version = "1.43", features = [ "rt-multi-thread" ] }
zip = "8"
git-version.workspace = true

oj_rc_core = { version = "*", path = "../rc_core" }
