[package]
name = "polariton_auth"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
polariton.workspace = true
num = "0.4"
rand = "0.9"
ring = "0.17"
simple-rijndael = "0.3"
