[package]
name = "oj_rc_auth"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
actix-web.workspace = true
actix-files.workspace = true
actix-ws = "0.4"
log.workspace = true
env_logger.workspace = true
tokio = { version = "1.43", features = [ "rt-multi-thread" ] }
futures.workspace = true
clap.workspace = true
oj_rc_core = { version = "*", path = "../rc_core" }
libfj.workspace = true
git-version.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
oj_serdes.workspace = true

handlebars = { version = "6", features = ["dir_source"] }
