[package]
name = "oj_rc_chat_room"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
env_logger.workspace = true
tokio = { version = "1.43", features = [ "net", "macros", "rt-multi-thread", "io-util" ] }
clap.workspace = true
polariton.workspace = true
oj_polariton_auth = { version = "*", path = "../polariton_auth" }
polariton_server.workspace = true
oj_rc_core = { version = "*", path = "../rc_core" }
serde.workspace = true
serde_json.workspace = true
regex = "1"
async-trait.workspace = true
git-version.workspace = true
chrono.workspace = true
