[package]
name = "oj_rc_core"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
polariton.workspace = true
base64.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
polariton_server.workspace = true
tokio = { version = "1.43", features = [ "net", "macros", "rt-multi-thread", "io-util", "time" ] }
async-trait.workspace = true
futures.workspace = true
rand.workspace = true
num-quaternion.workspace = true
indexmap = { version = "2.0", features = ["serde"] }

# auth
libfj.workspace = true
jsonwebtoken = { version = "10", features = [ "rust_crypto" ] }
argon2 = { version = "0.5", features = [ "std" ] }
# federated auth
openidconnect.workspace = true
ring = "0.17"
urlencoding.workspace = true

# intercom
sha2 = "0.11"
reqwest = { version = "0.13", default-features = false, features = [ "rustls", "charset", "json", "form" ] }
reqwest-websocket = { version = "0.6", default-features = false, features = [ "json" ] }
oj_serdes.workspace = true

oj_rc_database = { version = "*", path = "../rc_database" }
oj_rc_factory = { version = "*", path = "../rc_factory" }
