[package]
name = "oj_rc_factory_web"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
actix-web.workspace = true
actix-files.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
git-version.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
handlebars = { version = "6", features = ["dir_source"] }

libfj.workspace = true
oj_rc_core = { version = "*", path = "../rc_core" }
oj_rc_factory = { version = "*", path = "../rc_factory" }
