[package]
name = "oj_rc_microtransactions"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actix-web.workspace = true
libfj.workspace = true
log.workspace = true
env_logger.workspace = true
git-version.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

tokio = { version = "1.43", features = [ "net", "macros", "rt-multi-thread", "io-util" ] }
# token transforming
jsonwebtoken.workspace = true
oj_rc_core = { version = "*", path = "../rc_core" }
sha2 = "0.10"
hex.workspace = true
