[package]
name = "oj_rc_multiplayer"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
log.workspace = true
env_logger.workspace = true
tokio = { version = "1.43", features = [ "net", "macros", "rt-multi-thread", "io-util" ] }
clap.workspace = true
oj_rc_core = { version = "*", path = "../rc_core" }
async-trait.workspace = true
bytes = "1.10"
byteserde = "0.6.2"
chrono.workspace = true
atomic_float = "1.1"
num-quaternion.workspace = true
rand.workspace = true
git-version.workspace = true

literustlib_server = { version = "0.4", path = "../../LiteRustLib/server" }
literustlib = { version = "0.4", path = "../../LiteRustLib" }
#literustlib_server = { version = "0.4" }
#literustlib = { version = "0.4" }
rlnl = { version = "0.1", path = "../../rlnl" }

oj_serdes.workspace = true
