[package]
name = "rc_services_room"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
env_logger.workspace = true
tokio = { version = "1.43", features = [ "net", "macros", "rt-multi-thread", "io-util" ] }
clap.workspace = true
polariton.workspace = true
polariton_auth = { version = "*", path = "../polariton_auth" }
polariton_server.workspace = true
base64 = "0.22"
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rc_core = { version = "*", path = "../rc_core" }
rc_factory = { version = "*", path = "../rc_factory" }
rand = "0.9"
async-trait.workspace = true
libfj.workspace = true
